--- a/Dasmotos Arts and Crafts/index.html
+++ b/Dasmotos Arts and Crafts/index.html
@@ -23,6 +23,7 @@
     <h2 class="sub3">Paint</h2>
     <img src="./resources/images/image4.jpeg" alt="A picture of paint tubes.">
     <h3>Clean Finnish Paint</h3>
+    <p>Get your paint!!!</p>
     <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.) Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<span> Starting at $5.00/tube.</span></p>
 </body>
 </html>
